--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: "Alex Lourie"
+  author: "Alex Lourie <djay.il@gmail.com>"
   description: Install zsh and oh-my-zsh config
   license: LGPL
   min_ansible_version: 1.4
@@ -8,7 +8,7 @@ galaxy_info:
   - name: Debian
     versions:
       - wheezy
-  - nane: Ubuntu
+  - name: Ubuntu
   - name: elementary os
   categories:
     - system
