Updated installing oh-my-zsh
Signed-off-by: Alex Lourie <djay.il@gmail.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,3 +2,6 @@
 
 - name: install zsh
   apt: pkg=zsh state=present
+
+- name: install oh-my-zsh
+  git: repo=https://github.com/robbyrussell/oh-my-zsh dest=~/.oh-my-zsh
