--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,15 +5,19 @@
 
 - name: install oh-my-zsh
   git: repo=https://github.com/robbyrussell/oh-my-zsh dest=~/.oh-my-zsh
+  sudo: false
 
 - name: Backing up existing ~/.zshrc
-  command: if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi
+  command: if [ -f ~{{user}}/.zshrc ]; then mv ~{{user}}/.zshrc{,.orig}; fi
+  sudo: false
 
 - name: Creating new ~/.zshrc
-  command: cp /home/{{user}}/.oh-my-zsh/templates/zshrc.zsh-template /home/{{user}}/.zshrc
+  command: cp ~{{user}}/.oh-my-zsh/templates/zshrc.zsh-template ~{{user}}/.zshrc
+  sudo: false
 
 - name: Add oh-my-solarized theme
-  copy: src=files/oh-my-zsh.theme dest=/home/{{user}/.oh-my-zsh/themes/oh-my-zsh.theme
+  copy: src=oh-my-zsh.theme dest=~{{user}/.oh-my-zsh/themes/oh-my-zsh.theme
+  sudo: false
 
 - name: switch to ZSH
   user: name={{user}} shell=/usr/bin/zsh
