--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,14 @@
 ---
 
-- name: install zsh
+- name: Install zsh in Redhat derivatives
+  sudo: yes
+  yum: name=zsh state=installed
+  when: ansible_os_family == 'RedHat'
+
+- name: Install zsh in Debian derivatives
+  sudo: yes
   apt: pkg=zsh state=present
+  when: ansible_os_family == 'Debian'
 
 - name: install oh-my-zsh
   git: repo=https://github.com/robbyrussell/oh-my-zsh dest=~/.oh-my-zsh
